Dev (#10)
* Rename mod identifiers from "my_qol_scripts" to "myqolscripts" for consistency across files

* Refactor variable declarations to use explicit types instead of 'var' for improved readability and consistency

* Add UI command and implement Scripts menu with script list functionality

* Add localization support for scripts menu and enhance UI layout

* Add options menu and update localization for scripts

* Added OptionsScreen

* Add settings screen for configuring IDE command and log redirection options

* Add keybinding management UI and localization support

* Refactor keybinding UI and improve localization support

* Add UIConstants and UIUtils for centralized UI configuration and utility functions

* Add ConsoleScreen and integrate console button in ScriptsMenuScreen

* chore: update mod part 1

* chore: update mod part 2

* chore: update mod part 3

* chore: update mod part 4

* chore: switching to kotlin dsl for gradle

* chore: update unpacking logic for Minecraft sources and remove CFR dependency

* chore: refactor argument checks and improve command handling

* chore: update mod final !

* chore: improve error handling and refactor event listener registration

* chore: rename yarn references to named in class mappings and update related logic

* chore: refactor scripting APIs to improve context handling and add new configuration methods

* chore: gradle, agents, and license changes

* chore: update project structure documentation for clarity and organization

* chore: remove unused ttf, and change icon

* chore: downgrade to java 21

* chore: deleted unsued files

* chore: implement script engine initialization and shutdown logic, fix a crash

* chore: refactor command API for improved clarity and consistency, update method names and argument handling

* chore: add ConfigsAPI for configuration management, implement methods for getting, setting, and saving configurations

* chore: improve error messages and method accessibility in hook-related clas